<resources>
    <!-- Name of the application -->
    <string name="app_name">PayKeeper</string>

    <!-- Action bar titles ===================================================================== -->

    <!-- Main Activity action bar title -->
    <string name="main_action_bar_title">Payment Keeper</string>

    <!-- Login activity action bar title -->
    <string name="login_action_bar_title">Sign Into Your Account</string>

    <!-- Action bar title for the AddOwnerRenterActivity when accessing Owner -->
    <string name="add_new_owner_action_bar_title">Add new owner</string>

    <!-- Action bar title for the AddOwnerRenterActivity when accessing Renter -->
    <string name="add_new_renter_action_bar_title">Add new renter</string>

    <!-- Country codes -->
    <!-- Indian country code -->
    <string name="country_code_india">+91</string>

    <!-- Ten digit mobile number example -->
    <string name="ten_digit_mob_no">9876543210</string>

    <!-- ACTIVITY_PAY_KEEPER_MAIN ===============================================================-->
    <string name="btn_text_my_payments">My Payments</string>
    <string name="btn_text_my_owners">My Owners</string>
    <string name="btn_text_my_renters">My Renters</string>
    <string name="btn_text_renter_payments">Renter Payments</string>
    <string name="btn_text_sign_out">Sign Out</string>
    <string name="tst_text_register_plz">Please register to use this app!</string>
    <string name="tv_text_about_app">About App</string>
    <string name="tv_text_account_details">Fetching account details</string>
    <string name="tv_text_house_owner">House Owner</string>
    <string name="tv_text_house_renter">House Renter</string>

    <!-- ACTIVITY_PAY_KEEPER_LOGIN ==============================================================-->
    <string name="btn_txt_edit">Edit</string>
    <string name="btn_txt_verify_and_continue"><![CDATA[Verify & Continue]]></string>
    <string name="btn_txt_send_verification_code">Send verification code</string>
    <string name="content_desc_login_bkg_image">Login background image</string>
    <string name="hint_six_digit_v_code">6 digit Verification code</string>
    <string name="btn_txt_clear">Clear</string>
    <string name="or_list_action_bar_title">My Owners/Renters List</string>

    <!-- ACTIVITY_OWNERS_RENTERS_LIST ========================================================== -->
    <!-- Text resource for empty list of owners -->
    <string name="tv_text_list_empty_owner">No owners were found.\nTap below to</string>

    <!-- Text resource for empty list of renters -->
    <string name="tv_text_list_empty_renter">No renters were found.\nTap below to</string>
    <string name="btn_text_add_new_owner">Add new owner</string>
    <string name="btn_text_add_new_renter">Add new renter</string>

    <!-- Text resource for firebase database 'Permission Denied' ================================-->
    <string name="tv_text_server_access_denied">"Server access denied.\nPlease contact app administrator."</string>

    <!-- ACTIVITY_ADD_OWNER_RENTER ============================================================= -->
    <string name="btn_text_continue">Continue</string>
    <string name="add_new_old_payment">Add new/old payment</string>

</resources>
